--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     }
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'cn.zhouchaoyuan:excelpanel:1.0.4'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
 
 
 }
