--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
 
 
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
